Thu Mar  9 14:21:07 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* MAINTAINERS (Core): Anthony Green is the Java - including
 	testsuite - maintainer.  Reformat testsuite and language support
 	sections

2000-03-08  Mark Kettenis  <kettenis@gnu.org>

	* i386-tdep.c (i386_linux_saved_pc_after_call): New function.
	* config/i386/tm-linux.h (SAVED_PC_AFTER_CALL): Define to call
	i386_linux_saved_pc_after_call.

2000-03-06  Jim Blandy  <jimb@redhat.com>

	From Tom Tromey <tromey@cygnus.com> and Keith Seitz <?>:

	* minsyms.c: #include <ctype.h>, for msymbol_hash_iw.
	(compact_minimal_symbols): Added `objfile' argument.
	Put symbols in the objfile's hash table.
	(install_minimal_symbols): Put symbols in the objfile's demangled
	hash table.
	(lookup_minimal_symbol): Use hash table to find symbol in
	objfile.
	(msymbol_hash_iw, msymbol_hash, add_minsym_to_hash_table): New
	functions.
	(prim_record_minimal_symbol_and_info): Initialize the
	hash link fields of the new minimal symbol.
	* symtab.h (struct minimal_symbol): New fields `hash_next',
	`demangled_hash_next'.
	(msymbol_hash_iw, msymbol_hash, add_minsym_to_hash_table): Declare.
	* objfiles.h (MINIMAL_SYMBOL_HASH_SIZE): New define.
	(struct objfile): New fields `msymbol_hash',
	`msymbol_demangled_hash'.

2000-03-06  Jim Blandy  <jimb@redhat.com>

	* solib.c (first_link_map_member): Doc fix.

2000-03-06  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

        From  Eli Zaretskii  <eliz@is.elta.co.il>:

	* event-loop.c (poll_timers): Don't compare delta.tv_sec with
	zero, since time_t might be unsigned.

2000-03-06  Mark Kettenis  <kettenis@gnu.org>

	* i386-linux-nat.c (supply_fpregset): Mask off the reserved bits
	in *FPREGSETP.
	(convert_to_fpregset): Don't touch the reserved bits in *FPREGSETP.

2000-03-05  Mark Kettenis  <kettenis@gnu.org>

	Allow GDB to run on Linux 2.0 again.
	* config.in: Add HAVE_PTRACE_GETREGS.
	* configure.in: Check if <sys/ptrace.h> defines PTRACE_GETREGS.
	* configure: Regenerated.